fixed contact me button, as it was displaying wrong on different devices. Changed scrollbar style as well

--- a/assests/styles/style.css
+++ b/assests/styles/style.css
@@ -106,7 +106,7 @@ header {
     background-color: lime;
     color: black;
     width: 200px;
-    height: 60px;
+    height: 80px;
     margin-top: 50px;
     font-size: 30px;
 }
@@ -332,3 +332,21 @@ footer {
         bottom: 0%;
     }
 }
+
+/* SCROLLBAR */
+
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background: #000000;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: rgb(126, 126, 126);
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background: rgb(2, 255, 65);
+  }
